thay doi noi dung chua co tai khoan

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,7 +66,7 @@
         android:layout_marginStart="70dp"
         android:layout_marginTop="650dp"
         android:paddingTop="5dp"
-        android:text="Bạn chưa có tài khoản?" />
+        android:text="Bạn chưa có tài khoảnn?" />
 
     <Button
         android:id="@+id/button2"
